--- a/src/app/reactive/pages/basic-page/basic-page.component.html
+++ b/src/app/reactive/pages/basic-page/basic-page.component.html
@@ -16,10 +16,18 @@
                            formControlName="name"
                            placeholder="Nombre del producto">
 
-                    <span class="form-text text-danger">
-                        <!-- Debe de ser de 3 letras -->
-                        error message
+                    <span *ngIf="isValidField('name')"
+                          class="form-text text-danger">
+                        {{ getFieldError('name') }}
                     </span>
+
+                    <!--
+                    <span *ngIf="myForm.controls['name'].getError('minlength') && myForm.controls['name'].touched"
+                          class="form-text text-danger">
+                        Este campo requiere minimo 3 letras
+                      </span>
+                    -->
+
                 </div>
             </div>
 
@@ -31,8 +39,8 @@
                            class="form-control"
                            formControlName="price"
                            placeholder="Precio del producto">
-                    <span class="form-text text-danger">
-                        El precio debe de ser 0 o mayor
+                    <span *ngIf="isValidField('price')" class="form-text text-danger">
+                        El precio debe de ser 0 o mayor.
                     </span>
                 </div>
             </div>
@@ -46,8 +54,8 @@
                            formControlName="inStorage"
                            placeholder="Existencias del producto">
 
-                    <span class="form-text text-danger">
-                         Las existencias deben de ser 0 o mayor
+                    <span *ngIf="isValidField('inStorage')"  class="form-text text-danger">
+                         Las existencias deben de ser 0 o mayor.
                     </span>
                 </div>
             </div>
