--- a/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
+++ b/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
@@ -10,8 +10,8 @@
             <input class="form-control"
                   formControlName="name"
                    placeholder="Nombre de la persona">
-            <span class="form-text text-danger">
-                   error message
+            <span *ngIf="isValidField('name')" class="form-text text-danger">
+              {{ getFieldError('name') }}
             </span>
         </div>
     </div>
@@ -54,8 +54,8 @@
 
                 </div>
 
-                <span class="form-text text-danger">
-                   Este campo es requerido
+                <span *ngIf="isValidFieldInArray(favoriteGames, i)" class="form-text text-danger">
+                  Este campo es requirido
                 </span>
 
             </div>
